# inventory-stock-tracker

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  inventory_backend_build_prompt.md  pyproject.toml  railway.toml  render.yaml  requests.http
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/v1/: health.py  movements.py  products.py  router.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: __init__.py  product.py
app/schemas/: common.py  movement.py  pagination.py  product.py
app/services/: movement_service.py  product_service.py
scripts/: init-db.sql  seed.py  start.sh
tests/: conftest.py  test_concurrency.py  test_movements.py  test_products.py
